It's not the best solution to fix the height of the blocks containing text. Please, use paddings to make the necessary vertical spacing, instead.

--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,6 +1,5 @@
 .photo-grid__item {
   max-width: 282px;
-  max-height: 361px;
   margin: 0;
   background-color: #FFFFFF;
   border-radius: 10px;
